# BlueShell

./: .gitignore  Makefile  README.md  agent_capabilities.json  config.json
.github/workflows/: validate.yml
C2_Profiles/: README.md
Payload_Type/blueshell/: .dockerignore  Dockerfile  main.py
Payload_Type/blueshell/blueshell/: __init__.py
Payload_Type/blueshell/blueshell/agent_code/stage0/: CMakeLists.txt  README.md  build.sh  configure.py
Payload_Type/blueshell/blueshell/agent_code/stage0/cmake/: mingw64.cmake
Payload_Type/blueshell/blueshell/agent_code/stage0/include/: stage0.h
Payload_Type/blueshell/blueshell/agent_code/stage0/src/: core.c  debug.c  entry.c  message.c  mythic.c  mythic_tasks.c  tasks.c  transport.c
Payload_Type/blueshell/blueshell/agent_code/stage1/: Cargo.toml  build.rs  build.sh
Payload_Type/blueshell/blueshell/agent_code/stage1/src/: codec.rs  coff.rs  config.rs  lib.rs  main.rs  protocol.rs  proxy.rs  runtime.rs
Payload_Type/blueshell/blueshell/agent_code/stage1/src/commands/: coff.rs  exec.rs  file.rs  fingerprint.rs  mod.rs  process.rs  stage.rs  system.rs
Payload_Type/blueshell/blueshell/agent_code/stage1/src/transport/: http.rs  mod.rs  smb.rs  tcp.rs
Payload_Type/blueshell/blueshell/mythic/: __init__.py
Payload_Type/blueshell/blueshell/mythic/agent_functions/: __init__.py  build_support.py  builder.py  cd.py  common.py  download.py  exit.py  ls.py  operator_commands.py  pwd.py  shell.py  sleep.py  upload.py
Payload_Type/blueshell/tests/: test_build_support.py
docs/: ARCHITECTURE.md  TESTING.md
scripts/: validate_layout.py
