[package]
name = "stage1"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
diagnostics = []

[dependencies]
aes = "0.8"
base64 = "0.22"
cbc = { version = "0.1", features = ["alloc", "block-padding"] }
hmac = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
incremental = false
